compiler.output
Grammar

    0 $accept: Programa $end

    1 Programa: ListaFuncoes BlocoPrincipal
    2         | BlocoPrincipal

    3 ListaFuncoes: ListaFuncoes Funcao
    4             | Funcao

    5 Funcao: TipoRetorno TID '(' DeclParametros ')' BlocoPrincipal
    6       | TipoRetorno TID '(' ')' BlocoPrincipal

    7 TipoRetorno: Tipo
    8            | TVOID

    9 DeclParametros: DeclParametros ',' Parametro
   10               | Parametro

   11 Parametro: Tipo TID

   12 BlocoPrincipal: '{' Declaracoes ListaCmd '}'
   13               | '{' ListaCmd '}'

   14 Declaracoes: Declaracoes Declaracao
   15            | Declaracao

   16 Declaracao: Tipo ListaId ';'

   17 Tipo: TINT
   18     | TSTRING
   19     | TFLOAT

   20 ListaId: ListaId ',' TID
   21        | TID

   22 Bloco: '{' ListaCmd '}'

   23 ListaCmd: ListaCmd Comando
   24         | Comando

   25 Comando: CmdSe
   26        | CmdEnquanto
   27        | CmdAtrib
   28        | CmdEscrita
   29        | CmdLeitura
   30        | ChamadaProc
   31        | Retorno

   32 Retorno: TRETURN ExpressaoAritmetica ';'
   33        | TRETURN TLITERAL ';'

   34 CmdSe: TIF '(' ExpressaoLogica ')' Bloco
   35      | TIF '(' ExpressaoLogica ')' Bloco TELSE Bloco

   36 CmdEnquanto: TWHILE '(' ExpressaoLogica ')' Bloco
   37            | TDO Bloco TWHILE '(' ExpressaoLogica ')' ';'

   38 CmdAtrib: TID '=' ExpressaoAritmetica ';'
   39         | TID '=' TLITERAL ';'
   40         | AutoOperacao ';'

   41 CmdEscrita: TPRINT '(' ExpressaoAritmetica ')' ';'
   42           | TPRINT '(' TLITERAL ')' ';'

   43 CmdLeitura: TREAD '(' TID ')' ';'

   44 ChamadaProc: ChamadaFuncao ';'

   45 ChamadaFuncao: TID '(' ListaParametros ')'
   46              | TID '(' ')'

   47 ListaParametros: ListaParametros ',' ExpressaoAritmetica
   48                | ListaParametros ',' TLITERAL
   49                | ExpressaoAritmetica
   50                | TLITERAL

   51 ExpressaoRelacional: ExpressaoAritmetica '<' ExpressaoAritmetica
   52                    | ExpressaoAritmetica '>' ExpressaoAritmetica
   53                    | ExpressaoAritmetica TMEIG ExpressaoAritmetica
   54                    | ExpressaoAritmetica TMAIG ExpressaoAritmetica
   55                    | ExpressaoAritmetica TEQ ExpressaoAritmetica
   56                    | ExpressaoAritmetica TDIF ExpressaoAritmetica

   57 ExpressaoLogica: ExpressaoLogica TAND ArgumentoLogico
   58                | ExpressaoLogica TOR ArgumentoLogico
   59                | ArgumentoLogico

   60 ArgumentoLogico: '(' ExpressaoLogica ')'
   61                | '!' ArgumentoLogico
   62                | ExpressaoRelacional

   63 ExpressaoAritmetica: ExpressaoAritmetica '+' TermoAritmetico
   64                    | ExpressaoAritmetica '-' TermoAritmetico
   65                    | TermoAritmetico

   66 TermoAritmetico: TermoAritmetico '*' FatorAritmetico
   67                | TermoAritmetico '/' FatorAritmetico
   68                | FatorAritmetico

   69 FatorAritmetico: '(' ExpressaoAritmetica ')'
   70                | '-' FatorAritmetico
   71                | ChamadaFuncao
   72                | TINT
   73                | TFLOAT
   74                | TID

   75 AutoOperacao: TID '+' '+'
   76             | TID '+' '=' ExpressaoAritmetica
   77             | TID '-' '-'
   78             | TID '-' '=' ExpressaoAritmetica
   79             | TID '*' '=' ExpressaoAritmetica
   80             | TID '/' '=' ExpressaoAritmetica


Terminals, with rules where they appear

$end (0) 0
'!' (33) 61
'(' (40) 5 6 34 35 36 37 41 42 43 45 46 60 69
')' (41) 5 6 34 35 36 37 41 42 43 45 46 60 69
'*' (42) 66 79
'+' (43) 63 75 76
',' (44) 9 20 47 48
'-' (45) 64 70 77 78
'/' (47) 67 80
';' (59) 16 32 33 37 38 39 40 41 42 43 44
'<' (60) 51
'=' (61) 38 39 76 78 79 80
'>' (62) 52
'{' (123) 12 13 22
'}' (125) 12 13 22
error (256)
TDO (258) 37
TIF (259) 34 35
TINT (260) 17 72
TELSE (261) 35
TFLOAT (262) 19 73
TPRINT (263) 41 42
TREAD (264) 43
TRETURN (265) 32 33
TSTRING (266) 18
TVOID (267) 8
TWHILE (268) 36 37
TMEIG (269) 53
TMAIG (270) 54
TEQ (271) 55
TDIF (272) 56
TAND (273) 57
TOR (274) 58
TID (275) 5 6 11 20 21 38 39 43 45 46 74 75 76 77 78 79 80
TLITERAL (276) 33 39 42 48 50


Nonterminals, with rules where they appear

$accept (36)
    on left: 0
Programa (37)
    on left: 1 2, on right: 0
ListaFuncoes (38)
    on left: 3 4, on right: 1 3
Funcao (39)
    on left: 5 6, on right: 3 4
TipoRetorno (40)
    on left: 7 8, on right: 5 6
DeclParametros (41)
    on left: 9 10, on right: 5 9
Parametro (42)
    on left: 11, on right: 9 10
BlocoPrincipal (43)
    on left: 12 13, on right: 1 2 5 6
Declaracoes (44)
    on left: 14 15, on right: 12 14
Declaracao (45)
    on left: 16, on right: 14 15
Tipo (46)
    on left: 17 18 19, on right: 7 11 16
ListaId (47)
    on left: 20 21, on right: 16 20
Bloco (48)
    on left: 22, on right: 34 35 36 37
ListaCmd (49)
    on left: 23 24, on right: 12 13 22 23
Comando (50)
    on left: 25 26 27 28 29 30 31, on right: 23 24
Retorno (51)
    on left: 32 33, on right: 31
CmdSe (52)
    on left: 34 35, on right: 25
CmdEnquanto (53)
    on left: 36 37, on right: 26
CmdAtrib (54)
    on left: 38 39 40, on right: 27
CmdEscrita (55)
    on left: 41 42, on right: 28
CmdLeitura (56)
    on left: 43, on right: 29
ChamadaProc (57)
    on left: 44, on right: 30
ChamadaFuncao (58)
    on left: 45 46, on right: 44 71
ListaParametros (59)
    on left: 47 48 49 50, on right: 45 47 48
ExpressaoRelacional (60)
    on left: 51 52 53 54 55 56, on right: 62
ExpressaoLogica (61)
    on left: 57 58 59, on right: 34 35 36 37 57 58 60
ArgumentoLogico (62)
    on left: 60 61 62, on right: 57 58 59 61
ExpressaoAritmetica (63)
    on left: 63 64 65, on right: 32 38 41 47 49 51 52 53 54 55 56 63
    64 69 76 78 79 80
TermoAritmetico (64)
    on left: 66 67 68, on right: 63 64 65 66 67
FatorAritmetico (65)
    on left: 69 70 71 72 73 74, on right: 66 67 68 70
AutoOperacao (66)
    on left: 75 76 77 78 79 80, on right: 40


State 0

    0 $accept: . Programa $end

    TINT     shift, and go to state 1
    TFLOAT   shift, and go to state 2
    TSTRING  shift, and go to state 3
    TVOID    shift, and go to state 4
    '{'      shift, and go to state 5

    Programa        go to state 6
    ListaFuncoes    go to state 7
    Funcao          go to state 8
    TipoRetorno     go to state 9
    BlocoPrincipal  go to state 10
    Tipo            go to state 11


State 1

   17 Tipo: TINT .

    $default  reduce using rule 17 (Tipo)


State 2

   19 Tipo: TFLOAT .

    $default  reduce using rule 19 (Tipo)


State 3

   18 Tipo: TSTRING .

    $default  reduce using rule 18 (Tipo)


State 4

    8 TipoRetorno: TVOID .

    $default  reduce using rule 8 (TipoRetorno)


State 5

   12 BlocoPrincipal: '{' . Declaracoes ListaCmd '}'
   13               | '{' . ListaCmd '}'

    TDO      shift, and go to state 12
    TIF      shift, and go to state 13
    TINT     shift, and go to state 1
    TFLOAT   shift, and go to state 2
    TPRINT   shift, and go to state 14
    TREAD    shift, and go to state 15
    TRETURN  shift, and go to state 16
    TSTRING  shift, and go to state 3
    TWHILE   shift, and go to state 17
    TID      shift, and go to state 18

    Declaracoes    go to state 19
    Declaracao     go to state 20
    Tipo           go to state 21
    ListaCmd       go to state 22
    Comando        go to state 23
    Retorno        go to state 24
    CmdSe          go to state 25
    CmdEnquanto    go to state 26
    CmdAtrib       go to state 27
    CmdEscrita     go to state 28
    CmdLeitura     go to state 29
    ChamadaProc    go to state 30
    ChamadaFuncao  go to state 31
    AutoOperacao   go to state 32


State 6

    0 $accept: Programa . $end

    $end  shift, and go to state 33


State 7

    1 Programa: ListaFuncoes . BlocoPrincipal
    3 ListaFuncoes: ListaFuncoes . Funcao

    TINT     shift, and go to state 1
    TFLOAT   shift, and go to state 2
    TSTRING  shift, and go to state 3
    TVOID    shift, and go to state 4
    '{'      shift, and go to state 5

    Funcao          go to state 34
    TipoRetorno     go to state 9
    BlocoPrincipal  go to state 35
    Tipo            go to state 11


State 8

    4 ListaFuncoes: Funcao .

    $default  reduce using rule 4 (ListaFuncoes)


State 9

    5 Funcao: TipoRetorno . TID '(' DeclParametros ')' BlocoPrincipal
    6       | TipoRetorno . TID '(' ')' BlocoPrincipal

    TID  shift, and go to state 36


State 10

    2 Programa: BlocoPrincipal .

    $default  reduce using rule 2 (Programa)


State 11

    7 TipoRetorno: Tipo .

    $default  reduce using rule 7 (TipoRetorno)


State 12

   37 CmdEnquanto: TDO . Bloco TWHILE '(' ExpressaoLogica ')' ';'

    '{'  shift, and go to state 37

    Bloco  go to state 38


State 13

   34 CmdSe: TIF . '(' ExpressaoLogica ')' Bloco
   35      | TIF . '(' ExpressaoLogica ')' Bloco TELSE Bloco

    '('  shift, and go to state 39


State 14

   41 CmdEscrita: TPRINT . '(' ExpressaoAritmetica ')' ';'
   42           | TPRINT . '(' TLITERAL ')' ';'

    '('  shift, and go to state 40


State 15

   43 CmdLeitura: TREAD . '(' TID ')' ';'

    '('  shift, and go to state 41


State 16

   32 Retorno: TRETURN . ExpressaoAritmetica ';'
   33        | TRETURN . TLITERAL ';'

    TINT      shift, and go to state 42
    TFLOAT    shift, and go to state 43
    TID       shift, and go to state 44
    TLITERAL  shift, and go to state 45
    '('       shift, and go to state 46
    '-'       shift, and go to state 47

    ChamadaFuncao        go to state 48
    ExpressaoAritmetica  go to state 49
    TermoAritmetico      go to state 50
    FatorAritmetico      go to state 51


State 17

   36 CmdEnquanto: TWHILE . '(' ExpressaoLogica ')' Bloco

    '('  shift, and go to state 52


State 18

   38 CmdAtrib: TID . '=' ExpressaoAritmetica ';'
   39         | TID . '=' TLITERAL ';'
   45 ChamadaFuncao: TID . '(' ListaParametros ')'
   46              | TID . '(' ')'
   75 AutoOperacao: TID . '+' '+'
   76             | TID . '+' '=' ExpressaoAritmetica
   77             | TID . '-' '-'
   78             | TID . '-' '=' ExpressaoAritmetica
   79             | TID . '*' '=' ExpressaoAritmetica
   80             | TID . '/' '=' ExpressaoAritmetica

    '('  shift, and go to state 53
    '='  shift, and go to state 54
    '+'  shift, and go to state 55
    '-'  shift, and go to state 56
    '*'  shift, and go to state 57
    '/'  shift, and go to state 58


State 19

   12 BlocoPrincipal: '{' Declaracoes . ListaCmd '}'
   14 Declaracoes: Declaracoes . Declaracao

    TDO      shift, and go to state 12
    TIF      shift, and go to state 13
    TINT     shift, and go to state 1
    TFLOAT   shift, and go to state 2
    TPRINT   shift, and go to state 14
    TREAD    shift, and go to state 15
    TRETURN  shift, and go to state 16
    TSTRING  shift, and go to state 3
    TWHILE   shift, and go to state 17
    TID      shift, and go to state 18

    Declaracao     go to state 59
    Tipo           go to state 21
    ListaCmd       go to state 60
    Comando        go to state 23
    Retorno        go to state 24
    CmdSe          go to state 25
    CmdEnquanto    go to state 26
    CmdAtrib       go to state 27
    CmdEscrita     go to state 28
    CmdLeitura     go to state 29
    ChamadaProc    go to state 30
    ChamadaFuncao  go to state 31
    AutoOperacao   go to state 32


State 20

   15 Declaracoes: Declaracao .

    $default  reduce using rule 15 (Declaracoes)


State 21

   16 Declaracao: Tipo . ListaId ';'

    TID  shift, and go to state 61

    ListaId  go to state 62


State 22

   13 BlocoPrincipal: '{' ListaCmd . '}'
   23 ListaCmd: ListaCmd . Comando

    TDO      shift, and go to state 12
    TIF      shift, and go to state 13
    TPRINT   shift, and go to state 14
    TREAD    shift, and go to state 15
    TRETURN  shift, and go to state 16
    TWHILE   shift, and go to state 17
    TID      shift, and go to state 18
    '}'      shift, and go to state 63

    Comando        go to state 64
    Retorno        go to state 24
    CmdSe          go to state 25
    CmdEnquanto    go to state 26
    CmdAtrib       go to state 27
    CmdEscrita     go to state 28
    CmdLeitura     go to state 29
    ChamadaProc    go to state 30
    ChamadaFuncao  go to state 31
    AutoOperacao   go to state 32


State 23

   24 ListaCmd: Comando .

    $default  reduce using rule 24 (ListaCmd)


State 24

   31 Comando: Retorno .

    $default  reduce using rule 31 (Comando)


State 25

   25 Comando: CmdSe .

    $default  reduce using rule 25 (Comando)


State 26

   26 Comando: CmdEnquanto .

    $default  reduce using rule 26 (Comando)


State 27

   27 Comando: CmdAtrib .

    $default  reduce using rule 27 (Comando)


State 28

   28 Comando: CmdEscrita .

    $default  reduce using rule 28 (Comando)


State 29

   29 Comando: CmdLeitura .

    $default  reduce using rule 29 (Comando)


State 30

   30 Comando: ChamadaProc .

    $default  reduce using rule 30 (Comando)


State 31

   44 ChamadaProc: ChamadaFuncao . ';'

    ';'  shift, and go to state 65


State 32

   40 CmdAtrib: AutoOperacao . ';'

    ';'  shift, and go to state 66


State 33

    0 $accept: Programa $end .

    $default  accept


State 34

    3 ListaFuncoes: ListaFuncoes Funcao .

    $default  reduce using rule 3 (ListaFuncoes)


State 35

    1 Programa: ListaFuncoes BlocoPrincipal .

    $default  reduce using rule 1 (Programa)


State 36

    5 Funcao: TipoRetorno TID . '(' DeclParametros ')' BlocoPrincipal
    6       | TipoRetorno TID . '(' ')' BlocoPrincipal

    '('  shift, and go to state 67


State 37

   22 Bloco: '{' . ListaCmd '}'

    TDO      shift, and go to state 12
    TIF      shift, and go to state 13
    TPRINT   shift, and go to state 14
    TREAD    shift, and go to state 15
    TRETURN  shift, and go to state 16
    TWHILE   shift, and go to state 17
    TID      shift, and go to state 18

    ListaCmd       go to state 68
    Comando        go to state 23
    Retorno        go to state 24
    CmdSe          go to state 25
    CmdEnquanto    go to state 26
    CmdAtrib       go to state 27
    CmdEscrita     go to state 28
    CmdLeitura     go to state 29
    ChamadaProc    go to state 30
    ChamadaFuncao  go to state 31
    AutoOperacao   go to state 32


State 38

   37 CmdEnquanto: TDO Bloco . TWHILE '(' ExpressaoLogica ')' ';'

    TWHILE  shift, and go to state 69


State 39

   34 CmdSe: TIF '(' . ExpressaoLogica ')' Bloco
   35      | TIF '(' . ExpressaoLogica ')' Bloco TELSE Bloco

    TINT    shift, and go to state 42
    TFLOAT  shift, and go to state 43
    TID     shift, and go to state 44
    '('     shift, and go to state 70
    '!'     shift, and go to state 71
    '-'     shift, and go to state 47

    ChamadaFuncao        go to state 48
    ExpressaoRelacional  go to state 72
    ExpressaoLogica      go to state 73
    ArgumentoLogico      go to state 74
    ExpressaoAritmetica  go to state 75
    TermoAritmetico      go to state 50
    FatorAritmetico      go to state 51


State 40

   41 CmdEscrita: TPRINT '(' . ExpressaoAritmetica ')' ';'
   42           | TPRINT '(' . TLITERAL ')' ';'

    TINT      shift, and go to state 42
    TFLOAT    shift, and go to state 43
    TID       shift, and go to state 44
    TLITERAL  shift, and go to state 76
    '('       shift, and go to state 46
    '-'       shift, and go to state 47

    ChamadaFuncao        go to state 48
    ExpressaoAritmetica  go to state 77
    TermoAritmetico      go to state 50
    FatorAritmetico      go to state 51


State 41

   43 CmdLeitura: TREAD '(' . TID ')' ';'

    TID  shift, and go to state 78


State 42

   72 FatorAritmetico: TINT .

    $default  reduce using rule 72 (FatorAritmetico)


State 43

   73 FatorAritmetico: TFLOAT .

    $default  reduce using rule 73 (FatorAritmetico)


State 44

   45 ChamadaFuncao: TID . '(' ListaParametros ')'
   46              | TID . '(' ')'
   74 FatorAritmetico: TID .

    '('  shift, and go to state 53

    $default  reduce using rule 74 (FatorAritmetico)


State 45

   33 Retorno: TRETURN TLITERAL . ';'

    ';'  shift, and go to state 79


State 46

   69 FatorAritmetico: '(' . ExpressaoAritmetica ')'

    TINT    shift, and go to state 42
    TFLOAT  shift, and go to state 43
    TID     shift, and go to state 44
    '('     shift, and go to state 46
    '-'     shift, and go to state 47

    ChamadaFuncao        go to state 48
    ExpressaoAritmetica  go to state 80
    TermoAritmetico      go to state 50
    FatorAritmetico      go to state 51


State 47

   70 FatorAritmetico: '-' . FatorAritmetico

    TINT    shift, and go to state 42
    TFLOAT  shift, and go to state 43
    TID     shift, and go to state 44
    '('     shift, and go to state 46
    '-'     shift, and go to state 47

    ChamadaFuncao    go to state 48
    FatorAritmetico  go to state 81


State 48

   71 FatorAritmetico: ChamadaFuncao .

    $default  reduce using rule 71 (FatorAritmetico)


State 49

   32 Retorno: TRETURN ExpressaoAritmetica . ';'
   63 ExpressaoAritmetica: ExpressaoAritmetica . '+' TermoAritmetico
   64                    | ExpressaoAritmetica . '-' TermoAritmetico
